--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
 
 book:
   title: "Estimación de la integridad ecosistémica de las costas arenosas mexicanas a través de técnicas de aprendizaje de máquina"
-  subtitle: "Proyecto Conahcyt de ciencia de frontera"
+  subtitle: "Proyecto Conahcyt de ciencia de frontera (CF-2023-G-1497)"
 
   sidebar: 
       background: "#B5C9B8"
