inicio con versión funcional

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -35,7 +35,7 @@ book:
     - capitulos/references.qmd
     - capitulos/taller.qmd
 
-bibliography: references.bib
+bibliography: capitulos/references.bib
 csl: apa.csl
 
 citation: 
