Agregué capítulo para entregable de divulgación Cambie iconos de listado de taller Agregué figuara en Taller

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -45,6 +45,7 @@ book:
     - capitulos/cap1/Chapter-1.qmd
     - capitulos/references.qmd
     - capitulos/taller.qmd
+    - capitulos/divulgacion.qmd
 
 format:
   html:
