--- a/_quarto.yml
+++ b/_quarto.yml
@@ -63,19 +63,20 @@ format:
     coverpage-author: ["Octavio Pérez Maqueo", "Miguel Equihua Zamora"]
     coverpage-theme:
       page-html-color: "F6D5A8"
-      title-fontfamily: "QTDublinIrish.otf"
+      title-fontfamily: "QTFloraline.otf"
       title-fontsize: 36
       title-align: "right"
       title-bottom: "10in"
       author-style: "plain"
       author-sep: "newline"
+      author-fontfamily: "QTAtchen.otf"
       author-fontstyle: "textsc"
-      author-fontsize: 14
+      author-fontsize: 18
       author-align: "right"
-      author-bottom: "4in"  
+      author-bottom: "7in"  
       header-style: "none"
       footer-fontsize: 16
-      footer-fontfamily: "QTDublinIrish.otf"
+      footer-fontfamily: "QTAtchen.otf"
       footer-align: "right"
       footer-color: "white"
       footer-bottom: "3in"
