--- a/_quarto.yml
+++ b/_quarto.yml
@@ -53,7 +53,10 @@ format:
   pdf:
     documentclass: scrreprt
     prefer-html: true
-
+  epub:
+    cover-image: images/cover.png
+    prefer-html: true
+     
 execute: 
   freeze: true
 
